--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -8114,3 +8114,12 @@ ul li {
   background: -o-linear-gradient(265deg, rgba(35, 35, 35, 0.41) -55%, #232323 55%);
   background: linear-gradient(185deg, rgba(35, 35, 35, 0.41) -55%, #232323 55%);
 }
+
+.contactus .contact-page-form:before {
+  left: -37px;
+}
+
+.contactus .py-110 {
+  padding-bottom: 40px;
+  padding-top: 40px;
+}
