--- a/app/css/style.css
+++ b/app/css/style.css
@@ -897,3 +897,8 @@ p{
 body {
     font-family: 'Open Sans', sans-serif !important;
 }
+
+#banner {
+    padding: 30px 0 200px 0 !important;
+    position: relative;
+}
