--- a/app/css/style.css
+++ b/app/css/style.css
@@ -895,10 +895,36 @@ p{
 }
 
 body {
-    font-family: 'Open Sans', sans-serif !important;
+    font-family: 'Open Sans', 'sans-serif' !important;
 }
 
 #banner {
     padding: 30px 0 200px 0 !important;
     position: relative;
+}
+
+header ul, header p, header h6 {
+    margin-bottom: 0;
+}
+
+.container {
+	--bs-gutter-x: 0 !important;
+    max-width: 1200px !important;
+}
+
+.heading, h1, h2, h3, h4, h5, h6 {
+    font-family: 'Open Sans', 'sans-serif' !important;
+}
+
+body{
+    line-height: 23px !important;
+}
+
+.form-style-two .form-control{
+	color: black  !important;
+}
+
+h2 {
+    line-height: 1.3;
+    font-size: 44px !important;
 }
