--- a/app/css/style.css
+++ b/app/css/style.css
@@ -928,3 +928,20 @@ h2 {
     line-height: 1.3;
     font-size: 44px !important;
 }
+
+.pt-\[120px\] {
+    padding-top: 120px !important;
+}
+
+.contact-page-form:before {
+
+    background: #EDF0FE;
+}
+
+.valunteer-item--green.valunteer-item__designation {
+    background-image: url(/images/valunteer/valunteer-des-bg-green.jpg);
+}
+
+.valunteer-item--yellow.valunteer-item__designation {
+    background-image: url(/images/valunteer/valunteer-des-bg-yellow.jpg);
+}
