--- a/app/css/style.css
+++ b/app/css/style.css
@@ -953,14 +953,103 @@ header ul li a:focus{
 }
 
 .paddingleftright {
-    margin-left: 2rem !important;
-    margin-right: 2rem !important;
+    margin-left: 1rem !important;
+    margin-right: 1rem !important;
 }
 
 .paddingright{
-	margin-right: 2rem !important;
+	margin-right: 1rem !important;
 }
 
 .paddingleft{
-	margin-left: 2rem !important;
+	margin-left: 1rem !important;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.demo{ background: #262526; }
+.our-team{
+    padding: 5px 4px 1px;
+    background: #EDF0FE;
+    border-radius: 15px;
+    text-align: center;
+}
+.our-team .pic{
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    background: #EDF0FE;
+    padding: 10px;
+    margin-bottom: 25px;
+    transition: all 0.5s ease 0s;
+}
+.our-team:hover .pic{
+    background: #004fa3;
+    border-radius: 50%;
+}
+.pic img{
+    width: 100%;
+    height: auto;
+    border-radius: 50%;
+}
+.our-team .title{
+    display: block;
+    font-size: 20px;
+    font-weight: 600;
+    color: #2e282a;
+    text-transform: uppercase;
+    margin: 0 0 7px 0;
+}
+.our-team .post{
+    display: block;
+    font-size: 15px;
+    color: #004fa3;
+    text-transform: capitalize;
+    margin-bottom: 15px;
+}
+.our-team .social{
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+.our-team .social li{
+    display: inline-block;
+    margin-right: 5px;
+}
+.our-team .social li a{
+    display: block;
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    border-radius: 50%;
+    font-size: 15px;
+    color: #004fa3;
+    border: 1px solid #004fa3;
+    transition: all 0.5s ease 0s;
+}
+.our-team:hover .social li a{
+    background: #004fa3;
+    color: #fff;
+}
+@media only screen and (max-width: 990px){
+    .our-team{ margin-bottom: 30px; }
+}
+
+
+
+
