--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1184,3 +1184,50 @@ header ul li a:focus{
     left: 16%;
     border-color: rgb(255 255 255/var(--tw-border-opacity));
 }
+
+
+.history1stsection .imagewithcolor {
+    --tw-bg-opacity: 0.1;
+    --tw-border-opacity: 0.1;
+    background-color: rgb(255 255 255/var(--tw-bg-opacity));
+    background: #004fa3;
+    height: 103%;
+    width: 103%;
+    z-index: -3;
+    border-radius: 25px;
+    border-top: rou;
+    position: absolute;
+    top: 1%;
+    left: -13px;
+    /* border-color: rgb(255 255 255/var(--tw-border-opacity)); */
+    border-color: rgb(255 255 255/var(--tw-border-opacity));
+}
+
+.history1stsection .imagewithcolorblue {
+    background: #ED1C24;
+    --tw-bg-opacity: 0.1;
+    --tw-border-opacity: 0.1;
+    height: 62%;
+    width: 48.5%;
+    z-index: 0;
+    border-radius: 25px;
+    border-top: rou;
+    position: absolute;
+    top: 43%;
+    left: 0%;
+    border-color: rgb(255 255 255/var(--tw-border-opacity));
+}
+.historycopy2 .about-image-part:after {
+   content: unset;
+}
+
+
+.historycopy2 .corevaluestrn:before {
+    width: 77% !important;
+    height: 73% !important;
+    left: 5% !important;
+    top: 2% !important;
+    border: 2px dashed var(--bs-blue)!important;
+    border-bottom: 2px dashed #0146d2 !important;
+    border-top: 2px dashed #0146d2 !important;
+}
