--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,12 +2,48 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  
+:root{
+  --solid-white: #ffffff;
+  --white: #f2f2f2;
+  --solid-black: #000000;
+  --black: #020202;
+  --gray1: #e9e9e9;
+  --gray2: #c8c8c8;
+  --gray3: #999999;
+  --gray4: #888888;
+  --gray5: #666666;
+  --gray6: #444444;
+  --gray7: #333333;
+  --gray8: #111111;
+  --blue: #020381;
+  --blue1: #0305A8;
+
+
+  --font-size-1: 6px;
+  --font-size-2: 8px;
+  --font-size-3: 10px;
+  --font-size-4: 12px;
+  --font-size-5: 14px;
+  --font-size-6: 16px;
+  --font-size-7: 18px;
+  --font-size-8: 20px;
+  --font-size-9: 24px;
+  --font-size-10: 30px;
+  --font-size-11: 36px;
+  --font-size-12: 48px;
+  --font-size-13: 60px;
+  --font-size-14: 72px;
 }
 
 
+body{
+  background-color: var(--white);
+}
 
-body {
-
+@layer components{
+  .hero-heading{
+    @apply text-center font-black text-foreground leading-none;
+    font-size: var(--font-size-9);
+    text-transform: uppercase;
+  }
 }
